feat: AfreecaTV -> Soop 리브랜딩 대응 및 로거 개선