@@ -1,4 +1,4 @@
-package me.taromati.doneconnector.afreecatv;
+package me.taromati.doneconnector.soop;
 
 import lombok.Getter;
 
@@ -8,26 +8,28 @@ import java.util.Arrays;
 import java.util.List;
 
 @Getter
-public class AfreecaTVPacket {
-
+public class SoopPacket {
     private final String command;
     private final List<String> dataList;
 
     private final LocalDateTime receivedTime = LocalDateTime.now();
 
-    public AfreecaTVPacket(String[] args) {
+    public SoopPacket(String[] args) {
         this.dataList = new ArrayList<>(Arrays.asList(args));
-        String cmd = dataList.remove(0);
+        String cmd = dataList.removeFirst();
         this.command = cmd.substring(0, 4);
     }
 
     public String toString() {
         StringBuilder sb = new StringBuilder();
+
         sb.append("Command: ").append(command).append("\n");
         sb.append("Data: ");
+
         for (String d : dataList) {
             sb.append(d).append(" ");
         }
+
         return sb.toString();
     }
 }
